Backstretch image in demo landing and home page

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,7 +1,7 @@
 #logo {
-  font-size: 2.5rem !important;
+  font-size: 2.25rem !important;
   border: 3px solid #fff;
-  padding: 5px 3px;
+  padding: 4px;
   margin-top: 8px;
   height: auto;
 }
