--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -9,6 +9,7 @@
     font-weight: 700;
   }
   .navbar-brand, .navbar-nav > li > a {
+    font-weight: 600;
     color: $white;
   }
 }
@@ -27,5 +28,9 @@
     border-bottom: 1px solid $light-grey;
     font-weight: 600;
     padding: 7px 20px;
+    &:hover {
+      color: $white;
+      background-color: $navbar-default;
+    };
   }
 }
