Newfeed and left sidebar, profile pic, cover pic

--- a/src/scss/social-ui.scss
+++ b/src/scss/social-ui.scss
@@ -2,4 +2,5 @@
 @import "components/_fonts";
 @import "components/_navbar";
 @import "components/_forms";
+@import "components/_feed";
 @import "components/_style";
