--- a/src/scss/components/_feed.scss
+++ b/src/scss/components/_feed.scss
@@ -1,6 +1,5 @@
 .left-panel {
   background-color: $white;
-  border-radius: 5px;
   .cover-pic {
     height: 125px;
     position: relative;
@@ -8,10 +7,31 @@
       @extend .avatar;
       position: absolute;
       bottom: 0;
-      left: 35%;
+      left: 40%;
       margin-bottom: -30px;
       width: 63px !important;
       border: 4px solid $white;
+    }
+  }
+
+  .about {
+    margin-top: 40px;
+    text-align: center;
+    line-height: 1.85rem !important;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    #name {
+      font-weight: 600;
+      font-size: 1.65rem;
+    }
+    #username {
+      display: block;
+      font-size: 1.35rem;
+      color: $grey;
+    }
+    #new-microblog {
+      margin-bottom: 20px;
     }
   }
 }
