--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -10,6 +10,12 @@
   border: 2px solid $grey;
   box-shadow: none;
   -webkit-box-shadow: none;
+  outline: none;
+  &:focus {
+    border: 2px solid $light-black;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+  };
 } 
 
 .btn {
