--- a/src/scss/components/_feed.scss
+++ b/src/scss/components/_feed.scss
@@ -1,7 +1,7 @@
 .card {
   background-color: $white;
   border-radius: 0;
-  border: none;
+  border: 1px solid $light-grey;
   min-height: 50px;
 
   .card-title {
