Add bootstrap scss

--- a/src/scss/social-ui.scss
+++ b/src/scss/social-ui.scss
@@ -1,6 +1,5 @@
 @import "components/_colors";
 @import "components/_fonts";
-@import "components/_navbar";
-@import "components/_forms";
+@import "_bootstrap";
 @import "components/_feed";
 @import "components/_style";
