Changing bootstrap default navbar colors

--- a/src/scss/components/_colors.scss
+++ b/src/scss/components/_colors.scss
@@ -2,5 +2,5 @@ $white: #fff;
 $grey: #c0c0c0;
 $light-grey: #f0f0f0;
 $light-black: #555;
-$navbar-default: #019c70;
-$navbar-dark: #252e30;
+$ui-navbar-default-bg: #019c70;
+$ui-navbar-dark: #252e30;
