--- a/src/scss/bootstrap/_navbar.scss
+++ b/src/scss/bootstrap/_navbar.scss
@@ -167,6 +167,7 @@
   font-size: $font-size-large;
   line-height: $line-height-computed;
   height: $navbar-height;
+  font-weight: $font-bold;
 
   &:hover,
   &:focus {
@@ -414,7 +415,7 @@
   .navbar-nav {
     > li > a {
       color: $navbar-default-link-color;
-
+      font-weight: $navbar-default-link-weight;
       &:hover,
       &:focus {
         color: $navbar-default-link-hover-color;
