--- a/src/scss/bootstrap/_dropdowns.scss
+++ b/src/scss/bootstrap/_dropdowns.scss
@@ -34,7 +34,7 @@
   display: none; // none by default, but block on "open" of the menu
   float: left;
   min-width: 160px;
-  padding: 5px 0;
+  padding: 0;
   margin: 2px 0 0; // override default ul
   list-style: none;
   font-size: $font-size-base;
@@ -43,7 +43,6 @@
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
   border: 1px solid $dropdown-border;
   border-radius: $border-radius-base;
-  @include box-shadow(0 6px 12px rgba(0,0,0,.175));
   background-clip: padding-box;
 
   // Aligns the dropdown menu to right
@@ -62,9 +61,9 @@
   // Links within the dropdown menu
   > li > a {
     display: block;
-    padding: 3px 20px;
+    padding: 7px 20px;
     clear: both;
-    font-weight: normal;
+    font-weight: $font-normal;
     line-height: $line-height-base;
     color: $dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
