--- a/src/scss/bootstrap/_navbar.scss
+++ b/src/scss/bootstrap/_navbar.scss
@@ -327,7 +327,7 @@
 
 // Menu position and menu carets
 .navbar-nav > li > .dropdown-menu {
-  margin-top: 0;
+  margin-top: 15px;
   @include border-top-radius(0);
 }
 // Menu position and menu caret support for dropups via extra dropup class
