--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -19,7 +19,7 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary:         darken(#428bca, 6.5%) !default;
+$brand-primary:         lighten(#0063b0, 5%) !default;
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -369,16 +369,16 @@ $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
 $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
 $navbar-collapse-max-height:       340px !default;
 
-$navbar-default-color:             #fff !default;
-$navbar-default-bg:                #019c70 !default;
-$navbar-default-border:            none !default;
+$navbar-default-color:             #000 !default;
+$navbar-default-bg:                #fff !default;
+$navbar-default-border:            #ccc !default;
 
 // Navbar links
-$navbar-default-link-color:                #fff !default;
-$navbar-default-link-hover-color:          #252e30 !default;
+$navbar-default-link-color:                #000 !default;
+$navbar-default-link-hover-color:          #505050 !default;
 $navbar-default-link-hover-bg:             transparent !default;
-$navbar-default-link-active-color:         #fff !default;
-$navbar-default-link-active-bg:            darken($navbar-default-bg, 5%) !default;
+$navbar-default-link-active-color:         #000 !default;
+$navbar-default-link-active-bg:            #f0f0f0 !default;
 $navbar-default-link-disabled-color:       #ccc !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 $navbar-default-link-weight:               $font-medium !default;
@@ -389,9 +389,9 @@ $navbar-default-brand-hover-color:         darken($navbar-default-brand-color, 1
 $navbar-default-brand-hover-bg:            transparent !default;
 
 // Navbar toggle
-$navbar-default-toggle-hover-bg:           lighten($navbar-default-bg, 5%) !default;
-$navbar-default-toggle-icon-bar-bg:        #fff !default;
-$navbar-default-toggle-border-color:       #fff !default;
+$navbar-default-toggle-hover-bg:           #f0f0f0 !default;
+$navbar-default-toggle-icon-bar-bg:        #000 !default;
+$navbar-default-toggle-border-color:       #000 !default;
 
 
 // Inverted navbar
