--- a/src/scss/bootstrap/_wells.scss
+++ b/src/scss/bootstrap/_wells.scss
@@ -11,7 +11,7 @@
   background-color: $well-bg;
   border: 1px solid $well-border;
   border-radius: $border-radius-base;
-  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
+  @include box-shadow(none);
   blockquote {
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
