--- a/src/scss/bootstrap/mixins/_forms.scss
+++ b/src/scss/bootstrap/mixins/_forms.scss
@@ -24,7 +24,7 @@
     &:focus {
       border-color: darken($border-color, 10%);
       $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
-      @include box-shadow($shadow);
+      @include box-shadow(none);
     }
   }
   // Set validation states also for addons
