--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,13 +1,19 @@
+.navbar {
+  height: 50px;
+}
+
 #logo {
   font-size: 2.25rem !important;
-  border: 3px solid #fff;
+  border: 3px solid #000;
+  color: #000;
   padding: 4px;
-  margin-top: 8px;
   height: auto;
+  margin-top: 6px;
 }
 
 #landing-nav {
-  background: none;
+  /* background: none;
+  border: none; */
 }
 
 .navbar-nav > li > a {
