--- a/src/scss/bootstrap/_labels.scss
+++ b/src/scss/bootstrap/_labels.scss
@@ -4,15 +4,15 @@
 
 .label {
   display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
+  padding: .5em 1.2em;
+  font-size: 80%;
   font-weight: bold;
   line-height: 1;
   color: $label-color;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  border-radius: .25em;
+  border-radius: 0;
 
   // [converter] extracted a& to a.label
 
