--- a/src/scss/bootstrap/_close.scss
+++ b/src/scss/bootstrap/_close.scss
@@ -5,12 +5,12 @@
 
 .close {
   float: right;
-  font-size: ($font-size-base * 1.5);
+  font-size: ($font-size-base * 1.25);
   font-weight: $close-font-weight;
-  line-height: 1;
+  line-height: 1.25;
   color: $close-color;
-  text-shadow: $close-text-shadow;
-  @include opacity(.2);
+  text-shadow: none;
+  @include opacity(1);
 
   &:hover,
   &:focus {
