--- a/src/scss/bootstrap/_progress-bars.scss
+++ b/src/scss/bootstrap/_progress-bars.scss
@@ -25,11 +25,12 @@
 // Outer container
 .progress {
   overflow: hidden;
-  height: $line-height-computed;
+  height: 1.5rem;
   margin-bottom: $line-height-computed;
   background-color: $progress-bg;
   border-radius: $progress-border-radius;
-  @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
+  @include box-shadow(none);
+  border: 1px solid #ccc;
 }
 
 // Bar of progress
@@ -37,12 +38,12 @@
   float: left;
   width: 0%;
   height: 100%;
-  font-size: $font-size-small;
-  line-height: $line-height-computed;
+  font-size: 0.8 * $font-size-small;
+  line-height: 1.5rem;
   color: $progress-bar-color;
   text-align: center;
   background-color: $progress-bar-bg;
-  @include box-shadow(inset 0 -1px 0 rgba(0,0,0,.15));
+  @include box-shadow(none);
   @include transition(width .6s ease);
 }
 
