--- a/src/scss/bootstrap/_panels.scss
+++ b/src/scss/bootstrap/_panels.scss
@@ -7,9 +7,9 @@
 .panel {
   margin-bottom: $line-height-computed;
   background-color: $panel-bg;
-  border: 1px solid transparent;
+  border: 1px solid #ccc;
   border-radius: $panel-border-radius;
-  @include box-shadow(0 1px 1px rgba(0,0,0,.05));
+  @include box-shadow(none);
 }
 
 // Panel contents
