Add button groups

--- a/src/scss/bootstrap/_dropdowns.scss
+++ b/src/scss/bootstrap/_dropdowns.scss
@@ -37,7 +37,7 @@
   padding: 0;
   margin: 2px 0 0; // override default ul
   list-style: none;
-  font-size: $font-size-base;
+  font-size: 0.90 * $font-size-base;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: $dropdown-bg;
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
