--- a/src/scss/bootstrap/mixins/_tab-focus.scss
+++ b/src/scss/bootstrap/mixins/_tab-focus.scss
@@ -1,9 +1,9 @@
 // WebKit-style focus
 
 @mixin tab-focus() {
-  // Default
+  /* // Default
   outline: thin dotted;
   // WebKit
   outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+  outline-offset: -2px; */
 }
