Modals part done

--- a/src/scss/bootstrap/_modals.scss
+++ b/src/scss/bootstrap/_modals.scss
@@ -54,7 +54,7 @@
   border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
   border: 1px solid $modal-content-border-color;
   border-radius: $border-radius-large;
-  @include box-shadow(0 3px 9px rgba(0,0,0,.5));
+  @include box-shadow(none);
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: 0;
@@ -75,7 +75,7 @@
 // Modal header
 // Top section of the modal w/ title and dismiss
 .modal-header {
-  padding: $modal-title-padding;
+  padding: $modal-title-padding $modal-inner-padding;
   border-bottom: 1px solid $modal-header-border-color;
   min-height: ($modal-title-padding + $modal-title-line-height);
 }
@@ -87,6 +87,7 @@
 // Title text within header
 .modal-title {
   margin: 0;
+  font-weight: $font-bold;
   line-height: $modal-title-line-height;
 }
 
@@ -99,8 +100,8 @@
 
 // Footer (for actions)
 .modal-footer {
-  padding: $modal-inner-padding;
-  text-align: right; // right align buttons
+  padding: $modal-title-padding $modal-inner-padding;
+  text-align: left; // right align buttons
   border-top: 1px solid $modal-footer-border-color;
   @include clearfix; // clear it in case folks use .pull-* classes on buttons
 
