--- a/src/scss/components/_feed.scss
+++ b/src/scss/components/_feed.scss
@@ -1,13 +1,13 @@
 .card {
-  background-color: $white;
+  background-color: #fff;
   border-radius: 0;
-  border: 1px solid $light-grey;
+  border: 1px solid #ccc;
   min-height: 50px;
 
   .card-title {
     font-weight: 700;
     font-size: 1.75rem;
-    background-color: $light-grey;
+    background-color: #ccc;
     display: block;
     padding: 10px;
   }
@@ -23,7 +23,7 @@
     left: 40%;
     margin-bottom: -30px;
     width: 63px !important;
-    border: 4px solid $white;
+    border: 4px solid #fff;
   }
 }
 
@@ -43,12 +43,12 @@
 .username {
   display: block;
   font-size: 1.35rem;
-  color: $grey;
+  color: #ccc;
 }
 
 .micropost {
   padding: 15px 25px;
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid #ccc;
   .post {
     display: block;
   }
@@ -69,6 +69,6 @@
 
 .avatar {
   width: 35px;
-  border-radius: 10em;
-  margin-right: 5px;
+  /* border-radius: 10em; */
+  /* margin-right: 5px; */
 }
