--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,32 @@
   <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="../dist/css/ui-social.css">
-  <!-- <link rel="stylesheet" href="css/demo.css"> -->
 </head>
 <body>
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a id="logo" class="navbar-brand" href="../index.html">UI-Social</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="../index.html">UI-Social</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="css.html">CSS</a></li>
+          <li><a href="components.html">Components</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Getting Started</a></li>
+          <li class="active"><a href="index.html">Templates</a></li>
+        </ul>
       </div>
     </div>
   </nav>
+  <br><br>
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
@@ -64,12 +80,45 @@
               </div>
             </div>
           </div>
-          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br><hr>
+  <div class="container">
+    <div class="footer">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <span>MIT License</span> | 
+          <span>Based on <a href="http://getbootstrap.com/">Bootstrap</a></span> |
+          <span>Design by <a href="https://github.com/sudharti">@sudharti</a></span> |
+          <span>Icons - <a href="http://fortawesome.github.io/Font-Awesome/icons/">Fontawesome</a></span> |
+          <span>Images from <a href="https://unsplash.com/">Unsplash</a></span>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&type=follow"
+          allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
+          
+          <a class="twitter-share-button"
+          href="https://twitter.com/share"
+          data-via="sudharshan_iyer">Tweet</a>
+          <div class="g-plusone" data-size="medium"></div>
         </div>
       </div>
     </div>
   </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+  </script>
+  <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
