--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/img-1-small.jpg" alt="...">
+                <img src="../img/landing.png" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Landing Page</b></h4><br>
                   <p class="text-center"><a href="landing.html" class="btn btn-success" role="button">Live Preview</a></p>
