--- a/templates/landing.html
+++ b/templates/landing.html
@@ -12,35 +12,55 @@
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
-  <nav id="landing-nav" class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a id="logo" class="navbar-brand" href="../index.html">BS</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="../index.html">UI-Social</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">Jobs</a></li>
+          <li><a href="index.html">Blog</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="index.html">Login</a></li>
+        </ul>
       </div>
     </div>
   </nav>
   <div class="container" style="margin-top: 100px;">
     <div class="row">
-      <div class="col-lg-6">
-
+      <div class="col-lg-6 landing-text">
+        <h1><b>UI-Social</b></h1>
+        <h2><b>Simple, Elegant & Flat Theme</b></h2>
+        <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> & <a href="http://sass-lang.com/">Sass</a></span><br><br>
+        <p>UI Social is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
+        <p>You can also check out some <a href="index.html">Templates</a> built using UI-Social</p>
+        <br><br><br>
+        <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
       </div>
       <div class="col-lg-4 col-lg-offset-2">
         <div class="well">
-          <form action="home.html" role="form">
+          <h4><b>Get Early Access</b></h4><hr>
+          <form role="form">
+            <div class="form-group form-group-md">
+              <label for="exampleInputName">Name</label>
+              <input type="email" class="form-control" id="exampleInputName" placeholder="Name">
+            </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+              <label for="exampleInputEmail">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox"> Remember me
-              </label>
-            </div>
-            <button type="submit" class="btn btn-success">Login</button>
+            <button type="submit" class="btn btn-success btn-block">Sign me up</button>
           </form>
         </div>
       </div>
