--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
   <title>Social UI - Templates</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="../dist/css/ui-social.css">
 </head>
@@ -52,10 +51,10 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/img-2-small.jpg" alt="...">
+                <img src="../img/login.png" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Login Page</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center"><a href="login.html" class="btn btn-success" role="button">Live Preview</a></p>
                 </div>
               </div>
             </div>
