Change theme name in all places

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social UI - Login</title>
+  <title>Paper - Login</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/ui-social.css">
+  <link rel="stylesheet" href="../dist/css/paper.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="../index.html">UI-Social</a>
+        <a class="navbar-brand" href="../index.html">Paper</a>
       </div>
     </div>
   </nav>
