--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social UI - Templates</title>
+  <title>Paper - Templates</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/ui-social.css">
+  <link rel="stylesheet" href="../dist/css/paper.css">
 </head>
 <body>
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">UI-Social</a>
+        <a class="navbar-brand" href="../index.html">Paper</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
