--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social UI - Landing Page</title>
+  <title>Paper - Landing Page</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/ui-social.css">
+  <link rel="stylesheet" href="../dist/css/paper.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">UI-Social</a>
+        <a class="navbar-brand" href="../index.html">Paper</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
@@ -35,11 +35,11 @@
   <div class="container" style="margin-top: 100px;">
     <div class="row">
       <div class="col-lg-6 landing-text">
-        <h1><b>UI-Social</b></h1>
+        <h1><b>Paper</b></h1>
         <h2><b>Simple, Elegant & Flat Theme</b></h2>
         <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> & <a href="http://sass-lang.com/">Sass</a></span><br><br>
         <p>UI Social is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
-        <p>You can also check out some <a href="index.html">Templates</a> built using UI-Social</p>
+        <p>You can also check out some <a href="index.html">Templates</a> built using Paper</p>
         <br><br><br>
         <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
       </div>
