Started to dev timeline template

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                 <img src="../img/img-3-small.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Timeline</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center"><a href="timeline.html" class="btn btn-success" role="button">Live Preview</a></p>
                 </div>
               </div>
             </div>
