--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social UI - Home</title>
+  <title>Paper - Timeline</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
@@ -20,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a id="logo" class="navbar-brand" href="../index.html">BS</a>
+        <a id="logo" class="navbar-brand" href="../index.html">P</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form class="navbar-form navbar-left" role="search">
@@ -61,7 +61,7 @@
       <div class="col-lg-3">
         <div class="card">
           <div class="cover-pic">
-            <img src="../img/avatar-1.png" alt="" class="profile-pic">
+            <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="profile-pic">
           </div>
           <div class="about">
             <label class="name">Walter White</label>
