--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -44,7 +44,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="avatar" src="../img/avatar-1.png" alt="Profile"><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="navbar-avatar" src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="Profile"><span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Profile</a></li>
               <li><a href="#">Settings</a></li>
