--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/landing.png" alt="...">
+                <img src="../img/landing.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Landing Page</b></h4><br>
                   <p class="text-center"><a href="landing.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../img/login.png" alt="...">
+                <img src="../img/login.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Login Page</b></h4><br>
                   <p class="text-center"><a href="login.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -74,7 +74,7 @@
                 <img src="../img/img-4-small.jpg" alt="...">
                 <div class="caption">
                   <h4 class="text-center"><b>Blog</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
+                  <p class="text-center"><a href="blog.html" class="btn btn-success" role="button">Live Preview</a></p>
                 </div>
               </div>
             </div>
