Blog page style

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,7 +14,13 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 left-fixed">
-        <h2 class="logo"><a href="#">P</a></h2>
+        <h2 class="logo"><a href="/">P</a></h2>
+        <div class="content">
+          <h1 class="title"><b>Paper</b></h1>
+          <h4><b>Simple, Elegant & Flat Bootstrap Theme</b></h4>
+          <br><button class="btn btn-success">Start Writing</button>
+          <button class="btn btn-primary">Explore</button>
+        </div>
       </div>
       <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 right-relative">
         <div class="row">
@@ -207,6 +213,11 @@
               </div>
             </div>
           </div>
+          <br><br>
+          <div class="text-center">
+            <button class="btn btn-default">Load More</button>
+          </div>
+          <br><br>
         </div>
       </div>
     </div>
