--- a/templates/landing.html
+++ b/templates/landing.html
@@ -38,7 +38,7 @@
         <h1><b>Paper</b></h1>
         <h2><b>Simple, Elegant & Flat Theme</b></h2>
         <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> & <a href="http://sass-lang.com/">Sass</a></span><br><br>
-        <p>UI Social is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
+        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
         <p>You can also check out some <a href="index.html">Templates</a> built using Paper</p>
         <br><br><br>
         <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
