Finish up blog template

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,8 +18,9 @@
         <div class="content">
           <h1 class="title"><b>Paper</b></h1>
           <h4><b>Simple, Elegant & Flat Bootstrap Theme</b></h4>
+          <p>Built with Bootstrap & Sass</p>
           <br><button class="btn btn-success">Start Writing</button>
-          <button class="btn btn-primary">Explore</button>
+          <br><br>
         </div>
       </div>
       <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 right-relative">
