--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="../dist/css/paper.css">
+  <style type="text/css">
+    .img-preview {
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
@@ -42,7 +47,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../assets/img/landing.jpg" alt="...">
+                <img src="../assets/img/landing.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Landing Page</b></h4><br>
                   <p class="text-center"><a href="landing.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -51,7 +56,7 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../assets/img/login.jpg" alt="...">
+                <img src="../assets/img/login.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Login Page</b></h4><br>
                   <p class="text-center"><a href="login.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -62,7 +67,7 @@
           <div class="row">
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../assets/img/img-3.jpg" alt="...">
+                <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Timeline</b></h4><br>
                   <p class="text-center"><a href="timeline.html" class="btn btn-success" role="button">Live Preview</a></p>
@@ -71,7 +76,7 @@
             </div>
             <div class="col-lg-6 col-xs-6 col-md-3">
               <div class="thumbnail">
-                <img src="../assets/img/img-4.jpg" alt="...">
+                <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
                 <div class="caption">
                   <h4 class="text-center"><b>Blog</b></h4><br>
                   <p class="text-center"><a href="blog.html" class="btn btn-success" role="button">Live Preview</a></p>
