Template index page grid fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <div class="well">
           <h2><b>Templates</b></h2><hr>
           <div class="row">
-            <div class="col-lg-6 col-xs-6 col-md-3">
+            <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
               <div class="thumbnail">
                 <img src="../assets/img/landing.jpg" alt="..." class="img-preview">
                 <div class="caption">
@@ -54,7 +54,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-xs-6 col-md-3">
+            <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
               <div class="thumbnail">
                 <img src="../assets/img/login.jpg" alt="..." class="img-preview">
                 <div class="caption">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 col-xs-6 col-md-3">
+            <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
               <div class="thumbnail">
                 <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
                 <div class="caption">
@@ -74,7 +74,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-xs-6 col-md-3">
+            <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
               <div class="thumbnail">
                 <img src="../assets/img/blog.jpg" alt="..." class="img-preview">
                 <div class="caption">
